// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots renders MainBoard containing MenuBoard component when started is false 1`] = `
<div
  className="main-board"
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <div
    className="main-board"
    style={Object {}}
  >
    <MenuBoard
      chnCharType="sc"
      confirmHowMany={[Function]}
      confirmMaxIsNumber={[Function]}
      confirmMinIsNumber={[Function]}
      decimalPlacement="0"
      howMany="15"
      isMobile={false}
      maxBound="10"
      minBound="0"
      onClickStart={[Function]}
      questions={
        Object {
          "listen": true,
          "readCharacter": true,
          "readNumber": true,
        }
      }
      resetQAndA={[Function]}
      started={false}
      updateChnCharType={[Function]}
      updateDecimalPlacement={[Function]}
      updateHowMany={[Function]}
      updateHowManyBlur={[Function]}
      updateMaxBound={[Function]}
      updateMaxBoundBlur={[Function]}
      updateMinBound={[Function]}
      updateMinBoundBlur={[Function]}
      updateQuestions={[Function]}
    />
  </div>
  <div
    style={
      Object {
        "color": "white",
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    <hr />
    <p>
      nihaonumbers@gmail.com
    </p>
  </div>
</div>
`;

exports[`snapshots renders MainBoard containing StudyBoard when started is true 1`] = `
<div
  className="main-board"
  style={
    Object {
      "paddingTop": "5em",
    }
  }
>
  <StudyBoard
    chnCharType="sc"
    decimalPlacement="0"
    howMany="15"
    isMobile={false}
    loading={false}
    maxBound="10"
    minBound="0"
    onClickExit={[Function]}
    questions={
      Object {
        "listen": true,
        "readCharacter": true,
        "readNumber": true,
      }
    }
    resetQAndA={[Function]}
    updateLoading={[Function]}
  />
</div>
`;
